[package]
name = "parking_lot-benchmark"
version = "0.0.0"
authors = ["Amanieu d'Antras <amanieu@gmail.com>"]
edition = "2018"

[dependencies]
parking_lot = { path = ".." }
seqlock = "0.1"
libc = "0.2"
simple-mutex = "1.1"
spin = "0.7"
spinning_top = "0.2"

[dependencies.parking_lot_core]
path = "../core"
features = ["_priv_benchmark_only"]

[[bin]]
name = "mutex"
path = "src/mutex.rs"

[[bin]]
name = "rwlock"
path = "src/rwlock.rs"

[features]
nightly = ["parking_lot/nightly"]
deadlock_detection = ["parking_lot/deadlock_detection"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["synchapi"] }
